--- a/iteracion2BancoWebServices/src/main/webapp/RegistroTransaccion.html
+++ b/iteracion2BancoWebServices/src/main/webapp/RegistroTransaccion.html
@@ -91,10 +91,21 @@
 		<li>
 			<label>Terminado:</label>
 			<input name="done" type="text" max-length="20" placeholder=" SI O NO">
+			</SELECT>
+				<SELECT name="done">
+				<OPTION value="NO">NO</OPTION>
+				<OPTION value="SI">SI</OPTION>
+			</SELECT>
 		</li>
 		<li>
 			<label>Tipo:</label>
-			<input name="tipo" type="text" max-length="20" placeholder=" Tipo Del Tramite">
+			</SELECT>
+				<SELECT name="tipo">
+				<OPTION value="Prestamo">Prestamo</OPTION>
+				<OPTION value="Retiro">Retiro</OPTION>
+				<OPTION value="Depsito">Deposito</OPTION>
+				<OPTION value="Transferencia">Transferencia</OPTION>
+			</SELECT>
 		</li>
 		<li>
 			<label>Id Cuenta Origen:</label>
