--- a/iteracion2BancoWebServices/src/main/webapp/CerrarCuenta.html
+++ b/iteracion2BancoWebServices/src/main/webapp/CerrarCuenta.html
@@ -11,8 +11,12 @@
 		<h1>Cerrar Cuenta</h1>
 		<ul>
 		<li>
-			<label>ID: </label>
+			<label>ID cuenta a cerrar: </label>
 			<input name="id" type="text" max-length="20" placeholder=" ID">
+		</li>
+		<li>
+			<label>ID nueva cuenta pago: </label>
+			<input name="idNueva" type="text" max-length="20" placeholder=" ID">
 		</li>
 		<a><button type = "submit">Continuar</button></a>
 	</form>
