--- a/iteracion2BancoWebServices/src/main/webapp/ConsultarConsignacion.html
+++ b/iteracion2BancoWebServices/src/main/webapp/ConsultarConsignacion.html
@@ -1,22 +1,18 @@
 <html>
 <head>
-	<title>Cerrar Cuenta</title>
+	<title>Consultar Consignaciones</title>
 	<link rel="stylesheet" type="text/css" href="css/EstiloRegistro.css">
 	<link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Mono&subset=greek' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Time+News+Roman' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<form name="CerrarCuenta" action="CerrarCuenta" method="post">
-		<h1>Cerrar Cuenta</h1>
+	<form name="ConsultarConsignaciones" action="ConsultarConsignaciones" method="post">
+		<h1>Consultar consignaciones</h1>
 		<ul>
 		<li>
-			<label>ID cuenta a cerrar: </label>
-			<input name="id" type="text" max-length="20" placeholder=" ID">
-		</li>
-		<li>
-			<label>ID nueva cuenta pago: </label>
-			<input name="idNueva" type="text" max-length="20" placeholder=" ID">
+			<label>Monto minimo </label>
+			<input name="monto" type="text" max-length="20" placeholder=" ID">
 		</li>
 		<a><button type = "submit">Continuar</button></a>
 	</form>
